--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.27",
+        "symfony/mime": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
